created header for main page

--- a/hobbymatcher-ui/public/index.html
+++ b/hobbymatcher-ui/public/index.html
@@ -4,14 +4,57 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="index.css" rel="stylesheet">
     <title>hobbymatcher-ui</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but hobbymatcher-ui doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+
+    <!--header start-->
+    <header>
+      <!--navigation bar start-->
+      <nav>
+        <!--company logo-->
+        <div class="logo">
+          <img alt="hobby_matcher_logo" src="img/icons/logo-180x90.png">
+        </div>
+
+        <div class="navbar">
+          <ul>
+            <li><a href="#">Hobbies</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Blogs</a></li>
+          </ul>
+        </div>
+
+        <div class="search">
+          <form action="" class="search-form js-only" method="get">
+            <input id="" name="" placeholder="Search Events" type="text">
+            <input type="submit" value="">
+          </form>
+        </div>
+
+        <!-- 个人中心部分 -->
+        <div class="personal">
+          <a href="#">My Info<img alt="" src="img/icons/lingdang.png"></a>
+          <a href="#"><img src="img/icons/touxiang.png"> 刘德华</a>
+        </div>
+      </nav>
+    </header>
+
+    <!-- banner part -->
+    <div class="banner">
+      <div class="banner-in container">
+        123
+      </div>
+
+    </div>
+
+
+
+
     <!-- built files will be auto injected -->
   </body>
 </html>
